[package]
name = "botox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
bincode = "1.3.3"
chrono = "0.4.38"
futures = "0.3.30"
libloading = "0.8.4"
msedge-tts = "0.2.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
toml = "0.8.15"
